--- a/css/styles.css
+++ b/css/styles.css
@@ -40,6 +40,7 @@ img{
   position: relative;
   top: 25%;
   text-align: justify;
+  text-emphasis-color: rgba(0, 0, 0, 0.918);
 }
 #design pic{
   height: 450px;
@@ -56,4 +57,8 @@ img{
 .section4{
   position: relative;
   top: 25%;
-  text-align: right;
+  text-align: justify;
+
+  .section4, span{
+    text-decoration: height: 250%;
+  }
