--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-.intro-words{
+.intro-words {
   opacity: 1 !important;
   font-weight: 1000px;
   position: relative;
@@ -6,59 +6,56 @@
   text-align: justify;
   margin-left: 15%;
 }
-.intro-backdrop{
+.intro-backdrop {
   background-image: url("../images/workspace1.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   opacity: 0.9;
   height: 600px;
 }
-.section2{
+.section2 {
   width: 100%;
   position: relative;
   top: 25%;
   text-align: justify;
 }
-#sec2id{
+#sec2id {
   background-color: #d8bfd8;
   height: 600px;
 }
-img{
+img {
   height: 450px;
   position: absolute;
   margin-left: 8%;
   margin-top: -5%;
-  float: left;
 }
-#sec3id{
-  background-color: #8e6b97;
+#sec3id {
+  background-color: #b785b7;
   height: 600px;
-  color: rgba(0, 0, 0, 0.918);
+  color: #362036;
 }
-.section3{
+.section3 {
   width: 100%;
   position: relative;
   top: 25%;
   text-align: justify;
-  text-emphasis-color: rgba(0, 0, 0, 0.918);
+  text-emphasis-color: #000000;
 }
-#design pic{
+#design pic {
   height: 450px;
   position: absolute;
   margin-left: 8%;
   margin-top: -5%;
 }
-#sec4id{
-  background-color: #5f2e5f;
+#sec4id {
+  background-color: #d8bfd8;
   height: 200px;
-  color: #ffffff;
+  color: #000000;
   margin-top: -1%;
 }
-.section4{
+.section4 {
   position: relative;
   top: 25%;
   text-align: justify;
-
-  .section4, span{
-    text-decoration: height: 250%;
-  }
+  margin-left: 10%;
+}
